<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>jp.igapyon.diary</groupId>
	<artifactId>igapyonv3</artifactId>
	<version>2.0.20260104.2</version> <!-- SNAPSHOT は maven repos リリース時に追加など工夫して -->
	<packaging>jar</packaging>

	<name>igapyonv3</name>
	<description>igapyonv3 is a static site/blog generator for developers written in Java.</description>
	<url>https://igapyon.github.io/igapyonv3/</url>

	<!-- see: http://maven.apache.org/guides/mini/guide-central-repository-upload.html -->
	<licenses>
		<license>
			<name>The GNU Lesser General Public License, Version 3.0</name>
			<url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/igapyon/igapyonv3</url>
		<connection>scm:git:https://github.com/igapyon/igapyonv3.git</connection>
		<developerConnection>scm:git:https://github.com/igapyon/igapyonv3.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<developers>
		<developer>
			<id>igapyon</id>
			<name>Toshiki Iga</name>
			<email>igapyon@gmail.com</email>
			<url>http://www.igapyon.jp/</url>
			<roles>
				<role>lead</role>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>+9</timezone>
		</developer>
	</developers>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.12.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.12.2</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.ant/ant -->
		<dependency>
			<groupId>org.apache.ant</groupId>
			<artifactId>ant</artifactId>
			<version>1.10.15</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.9.0</version>
		</dependency>

		<!-- Apache FileUtils -->
		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.18.0</version>
		</dependency>

		<!-- Apache StringUtil -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.18.0</version>
		</dependency>
		<!-- Apache Text -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>1.13.1</version>
		</dependency>

		<!-- URLCodec -->
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.18.0</version>
		</dependency>

		<!-- normalize html tag -->
		<!-- https://mvnrepository.com/artifact/org.ccil.cowan.tagsoup/tagsoup -->
		<dependency>
			<groupId>org.ccil.cowan.tagsoup</groupId>
			<artifactId>tagsoup</artifactId>
			<version>1.2.1</version>
		</dependency>

		<!-- template engine -->
		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
		<dependency>
    			<groupId>org.freemarker</groupId>
    			<artifactId>freemarker</artifactId>
			<version>2.3.34</version>
		</dependency>

		<!-- RSS parser -->
		<!-- https://mvnrepository.com/artifact/com.rometools/rome -->
		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome</artifactId>
			<version>2.1.0</version>
		</dependency>

		<!-- Core -->
		<dependency>
		<groupId>com.vladsch.flexmark</groupId>
		<artifactId>flexmark</artifactId>
		<version>0.64.8</version>
		</dependency>

		<!-- Extensions -->
		<dependency>
			<groupId>com.vladsch.flexmark</groupId>
			<artifactId>flexmark-ext-tables</artifactId>
			<version>0.64.8</version>
		</dependency>
		<dependency>
			<groupId>com.vladsch.flexmark</groupId>
			<artifactId>flexmark-ext-wikilink</artifactId>
			<version>0.64.8</version>
		</dependency>
		<dependency>
			<groupId>com.vladsch.flexmark</groupId>
			<artifactId>flexmark-ext-gfm-strikethrough</artifactId>
			<version>0.64.8</version>
		</dependency>
	</dependencies>

	<properties>
		<java.version>11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<release>11</release>
					<compilerArgs>
						<arg>-Xlint:deprecation</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<systemPropertyVariables>
						<user.language>en</user.language>
						<user.region>US</user.region>
					</systemPropertyVariables>
				</configuration>
			</plugin>

			<!-- create sources.jar -->
			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
			</plugin>

			<!-- javadoc -->
			<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<additionalJOptions>
						<additionalJOption>-J-Duser.language=en</additionalJOption>
						<additionalJOption>-J-Duser.region=US</additionalJOption>
					</additionalJOptions>
					<locale>en</locale>
					<source>11</source>
					<show>protected</show>
					<encoding>UTF-8</encoding>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
				</configuration>
			</plugin>

			<!-- gpg -->
			<!-- 一時的に gpg 鍵の設定を無効化しています。 -->
    <plugin>
      <artifactId>maven-assembly-plugin</artifactId>
      <version>3.6.0</version>
      <configuration>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef>
        </descriptorRefs>
        <archive>
          <manifest>
            <mainClass>jp.igapyon.diary.igapyonv3.IgDiaryProcessor</mainClass>
          </manifest>
        </archive>
      </configuration>
      <executions>
        <execution>
          <id>make-assembly</id>
          <phase>package</phase>
          <goals>
            <goal>single</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
		</plugins>
	</build>
</project>
